# gameoflife

./: Cargo.toml
src/: main.rs
src/crates/table/: Cargo.toml
src/crates/table/src/: lib.rs
