[workspace]
members = ["src/crates/table"]

resolver = "2"

[package]
name = "gameOfLife"
version = "0.1.0"
edition = "2024"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"

[dependencies]
color-eyre.workspace = true
ratatui.workspace = true
crossterm.workspace = true

table = { path = "src/crates/table/" }